Combined face detection with denoising and edge detection. Ready for presentation.

--- a/src/test_nlm_denoise.ipynb
+++ b/src/test_nlm_denoise.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -16,7 +18,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# plt.rcParams['figure.figsize'] = [60, 30]"
@@ -25,7 +29,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def nlm_denoise_edge_detection(path):\n",
@@ -48,6 +54,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
